...
                    singleLine = singleLine, visualTransformation = visualTransformation,
                    interactionSource = interactions, isError = isError, label = label,
                    placeholder = placeholder, leadingIcon = leadingIcon, trailingIcon = trailingIcon,
                    supportingText = supportingText, colors = colors,
                    container = {
                        OutlinedTextFieldDefaults.Container(enabled, isError, interactions,
                            modifier = Modifier.testTag("input_slot"),
                            colors = colors, shape = CardTokens.rowShape,
                            focusedBorderThickness = CardTokens.inputFocusBorderWidth,
                            unfocusedBorderThickness = CardTokens.inputRestBorderWidth)
                    },
                )
            }
...
